# Esp32Framework

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  MOCK_ORGANIZATION.md  README.md  idf_component.yml  idf_component.yml.bak  sdkconfig
main/: CMakeLists.txt  main.cpp
main/common/: component.hpp  slave.hpp
main/common/context/: Contexts.hpp
main/common/esp/esp_http_server/: IEspHttpServer.hpp
main/common/esp/esp_now/: esp_now_if.hpp
main/common/esp/free_rtos/: free_rtos_if.hpp
main/common/esp_file_systems/: esp_littlefs_if.h
main/common/esp_http_server/: EspHttpServer.cpp  EspHttpServer.hpp  IEspHttpServer.hpp  esp_http_server_if.hpp
main/common/esp_logger/: EspLogger.cpp
main/common/esp_now/: EspNow.cpp  EspNow.hpp  EspNowHandler.cpp  EspNowHandler.hpp  IEspNow.hpp  IEspNowHandler.hpp  esp_now_handler.cpp  esp_now_handler.hpp  esp_now_if.hpp  esp_now_message.hpp
main/common/esp_nvs/: IEspNvs.hpp
main/common/logging/: esp_logger.cpp  esp_logger.hpp
main/common/nodes/master/: master.cpp  master.hpp
main/common/nodes/webserver/common/: Webserver.cpp  Webserver.hpp
main/common/nodes/webserver/common/apis/: ApiLogging.hpp  ApiNodes.hpp  ApiStatus.hpp  ApiSystem.hpp  IApiLogging.hpp  IApiNodes.hpp  IApiStatus.hpp  IApiSystem.hpp
main/common/nodes/webserver/dmx_controller/apis/: ApiConfig.hpp  ApiPresetValues.hpp  ApiPresets.cpp  ApiPresets.hpp  IApiConfig.hpp  IApiPresetValues.hpp
main/common/nodes/webserver/http_task/: ApiServer.cpp  ApiServer.hpp
main/common/nodes/webserver/webserver_task/: DmxControllerWebserver.cpp  DmxControllerWebserver.hpp  IDmxControllerWebserver.hpp  Webserver.cpp  Webserver.hpp
main/common/presets/: IPresetManager.hpp  PresetManager.hpp
main/common/tasks/: RtosTask.cpp  RtosTask.hpp
main/esp/: EspHttpServer.cpp  EspHttpServer.hpp  IEspHttpServer.hpp  esp_error_if.hpp  esp_http_server_if.hpp  esp_http_server_types.hpp
main/master/: master.cpp  master.hpp
main/projects/dmx_controller/dmx_controller_task/: DmxControllerTask.cpp  DmxControllerTask.hpp  IDmxControllerTask.hpp
main/projects/dmx_controller/http_task/: DmxControllerHttpTask.cpp  DmxControllerHttpTask.hpp  DmxControllerWebserver.cpp  DmxControllerWebserver.hpp  IDmxControllerHttpTask.h  IDmxControllerWebserver.hpp
main/projects/dmx_controller/http_task/apis/: ApiConfig.cpp  ApiPresetValues.cpp  ApiPresetValues.hpp  ApiPresets.hpp  IApiPresets.hpp
main/projects/dmx_controller/http_task/website/: configuration.html  control.html  manual.html  nodes.html
main/projects/dmx_controller/presets_task/: Preset.hpp  PresetManager.cpp
main/projects/dmx_controller/service_locator/: DmxControllerTaskContext.hpp  DmxServiceLocator.hpp  HttpTaskContext.hpp  PresetsTaskContext.hpp
main/slaves/webserver_slave/common/: IWebserverSlave.hpp  WebserverSlave.cpp  WebserverSlave.hpp
main/slaves/webserver_slave/common/apis/: ApiFirmware.hpp  ApiLogging.hpp  ApiNodes.hpp  ApiSecurity.hpp  ApiStatus.hpp  ApiSystem.hpp  IApiFirmware.hpp  IApiLogging.hpp  IApiNodes.hpp  IApiSecurity.hpp  IApiStatus.hpp  IApiSystem.hpp
main/slaves/webserver_slave/dmx_controller/: DmxControllerWebserverSlave.cpp  DmxControllerWebserverSlave.hpp  IDmxControllerWebserverSlave.hpp  MockDmxControllerWebserverSlave.hpp  WebserverSlave.cpp  WebserverSlave.hpp
main/slaves/webserver_slave/dmx_controller/apis/: ApiConfig.cpp  ApiConfig.hpp  ApiPresetValues.cpp  ApiPresetValues.hpp  ApiPresets.cpp  ApiPresets.hpp  IApiConfig.hpp  IApiPresetValues.hpp  IApiPresets.hpp
main/slaves/webserver_slave/dmx_controller/presets/: IPresetManager.hpp
main/slaves/webserver_slave/project_dmx_controller/: ApiConfig.cpp  ApiConfig.hpp  ApiFirmware.cpp  ApiFirmware.hpp  ApiLogging.cpp  ApiLogging.hpp  ApiNodes.cpp  ApiNodes.hpp  ApiPresetValues.hpp  ApiPresets.cpp  ApiPresets.hpp  ApiSecurity.hpp  ApiStatus.cpp  ApiStatus.hpp  ApiSystem.cpp  ApiSystem.hpp  WebserverSlave.cpp  WebserverSlave.hpp  api_config.cpp  api_presets.cpp  api_status.cpp  webserver_slave.cpp  webserver_slave.hpp
main/slaves/webserver_slave/project_dmx_controller/Api/: ApiConfig.hpp  ApiFirmware.hpp  ApiLogging.hpp  ApiNodes.hpp  ApiPresetValues.cpp  ApiPresetValues.hpp  ApiPresets.cpp  ApiPresets.hpp  ApiSecurity.hpp  ApiStatus.hpp  ApiSystem.hpp
main/slaves/webserver_slave/project_dmx_controller/apis/: ApiConfig.hpp  ApiSecurity.cpp
main/slaves/webserver_slave/project_dmx_controller/presets/: Preset.hpp
tests/api_tester/: ApiConfigTests.hpp  ApiFirmwareTests.hpp  ApiLoggingTests.cpp  ApiLoggingTests.hpp  ApiNodesTests.cpp  ApiNodesTests.hpp  ApiPresetValuesTests.cpp  ApiPresetValuesTests.hpp  ApiPresetsTests.cpp  ApiPresetsTests.hpp  ApiSecurityTests.hpp  ApiStatusTests.cpp  ApiStatusTests.hpp  ApiSystemTests.hpp  CMakeLists.txt  IHttpServerAdapter.h  MockEspHttpServer.cpp  MockEspHttpServer.hpp  MockEspLogger.cpp  MockEspNowHandler.hpp  MockEspNvs.hpp  MockPresetManager.hpp  TestHttpServerAdapter.cpp  TestHttpServerAdapter.h  mock_esp_http_server.h  test_main.cpp  webserver_slave_stubs.cpp
tests/api_tester/api/: ApiConfigTests.cpp  ApiConfigTests.hpp  ApiFirmwareTests.hpp  ApiLoggingTests.hpp  ApiNodesTests.hpp  ApiPresetValuesTests.hpp  ApiPresetsTests.hpp  ApiSecurityTests.hpp  ApiStatusTests.hpp  ApiSystemTests.hpp
tests/api_tester/apis/: ApiConfigTests.hpp  ApiFirmwareTests.cpp  ApiFirmwareTests.hpp  ApiLoggingTests.hpp  ApiNodesTests.hpp  ApiPresetValuesTests.hpp  ApiPresetsTests.hpp  ApiSecurityTests.cpp  ApiSecurityTests.hpp  ApiStatusTests.hpp  ApiSystemTests.cpp  ApiSystemTests.hpp
tests/api_tester/mock/: MockEspHttpServer.hpp  MockEspLogger.hpp  MockPresetManager.hpp
tests/api_tester/mocks/apis/: MockApiFirmware.hpp  MockApiLogging.hpp  MockApiNodes.hpp  MockApiSecurity.hpp  MockApiStatus.hpp  MockApiSystem.hpp
tests/api_tester/mocks/app/: MockPresetManager.hpp
tests/api_tester/mocks/dmx_controller_apis/: MockApiConfig.hpp  MockApiPresetValues.hpp  MockApiPresets.hpp
tests/api_tester/mocks/infrastructure/: MockEspHttpServer.hpp  MockEspLogger.hpp  MockEspNowHandler.hpp  MockEspNvs.cpp
(+165 files in other folders)
