idf_component_register(
    SRCS
        "main.cpp"
        "common/nodes/master/master.cpp"
        "common/esp/esp_logger/EspLogger.cpp"
        "common/esp/esp_http_server/EspHttpServer.cpp"
        "common/esp/esp_now/EspNow.cpp"
        "common/esp/esp_nvs/EspNvs.cpp"
        "common/esp/esp_file_systems/EspLittleFs.cpp"
        "common/nodes/webserver/dmx_controller/apis/ApiConfig.cpp"
        "common/nodes/webserver/dmx_controller/apis/ApiPresets.cpp"
        "common/nodes/webserver/http_task/apis/ApiStatus.cpp"
        "common/nodes/webserver/dmx_controller/apis/ApiPresetValues.cpp"
        "common/nodes/webserver/http_task/apis/ApiNodes.cpp"
        "common/nodes/webserver/http_task/apis/ApiSystem.cpp"
        "common/nodes/webserver/http_task/apis/ApiFirmware.cpp"
        "common/nodes/webserver/http_task/apis/ApiSecurity.cpp"
        "common/nodes/webserver/http_task/apis/ApiLogging.cpp"
        "common/nodes/webserver/http_task/apis/ApiResponse.cpp"
        "common/nodes/webserver/http_task/apis/ApiValidator.cpp"
        "common/nodes/webserver/webserver_task/Webserver.cpp"
        "common/nodes/webserver/webserver_task/DmxControllerWebserver.cpp"
        "common/nodes/webserver/dmx_controller/presets/PresetManager.cpp"
    INCLUDE_DIRS
        "."
        "common"
        "common/nodes/master"
        "common/esp/esp_logger"
        "common/esp/esp_http_server"
        "common/esp/esp_now"
        "common/esp/esp_nvs"
        "common/nodes/webserver/dmx_controller/presets"
        "common/nodes/webserver/http_task/apis"
    REQUIRES esp_littlefs esp_http_server nvs_flash esp_wifi
)
