idf_component_register(
    SRCS
        "main.cpp"
        "common/nodes/master/master.cpp"
        "common/esp/esp_logger/EspLogger.cpp"
        "common/esp/esp_http_server/EspHttpServer.cpp"
        "common/esp/esp_now/EspNow.cpp"
        "common/esp/esp_nvs/EspNvs.cpp"
        "common/esp/esp_file_systems/EspLittleFs.cpp"
        "projects/dmx_controller/http_task/apis/ApiConfig.cpp"
        "projects/dmx_controller/http_task/apis/ApiPresets.cpp"
        "common/nodes/webserver/http_task/apis/ApiStatus.cpp"
        "projects/dmx_controller/http_task/apis/ApiPresetValues.cpp"
        "common/nodes/webserver/http_task/apis/ApiNodes.cpp"
        "common/nodes/webserver/http_task/apis/ApiSystem.cpp"
        "common/nodes/webserver/http_task/apis/ApiFirmware.cpp"
        "common/nodes/webserver/http_task/apis/ApiSecurity.cpp"
        "common/nodes/webserver/http_task/apis/ApiLogging.cpp"
        "common/nodes/webserver/http_task/apis/ApiResponse.cpp"
        "common/nodes/webserver/http_task/apis/ApiValidator.cpp"
        "common/nodes/webserver/http_task/ApiServer.cpp"
        "projects/dmx_controller/http_task/DmxControllerWebserver.cpp"
        "projects/dmx_controller/presets_task/PresetManager.cpp"
        "projects/dmx_controller/dmx_controller_task/DmxControllerTask.cpp"
        "projects/dmx_controller/dmx_controller_task/DmxControllerTask.hpp"
        "common/tasks/RtosTask.cpp"
        "common/tasks/RtosTask.hpp"
        "common/tasks/IRtosTask.hpp"
    INCLUDE_DIRS
        "."
        "common"
        "common/nodes/master"
        "common/esp/esp_logger"
        "common/esp/esp_http_server"
        "common/esp/esp_now"
        "common/esp/esp_nvs"
        "common/nodes/webserver/http_task/apis"
        "projects/dmx_controller/dmx_controller_task"
    REQUIRES esp_littlefs esp_http_server nvs_flash esp_wifi
)
